--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "website",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": ">=18 <19"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
