--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "website",
   "type": "module",
   "private": true,
- 
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,6 +11,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
+    "@vue-email/components": "^0.0.21",
+    "@vue-email/render": "^0.0.9",
     "nuxt": "^4.2.2",
     "twilio": "^5.6.0",
     "vue": "^3.5.25",
@@ -22,6 +23,6 @@
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.1.18"
   }
 }
